added section and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input class="srch" type="search" name="" placeholder="type to text">
              <a href="#"><button class="btn">search</button></a>
               </div>
-          </div>uments/web/Untitled Folder
+          </div>
        </div>
        <div class="content">
           <h1> Bridge in the world with<br> <span>the most Beatiful</span><br>Views</h1><br>
@@ -36,7 +36,81 @@
              <a href="#">sign up here</a>
              <p class="liw">login with</p>
           </div>
-       </div>
+
+<section class="features">
+    <h2 class="section-heading">Our Highlights</h2>
+
+    <div class="feature-box-container">
+
+        <div class="feature-box">
+            <h3>Beautiful Views</h3>
+            <p>
+                Explore breathtaking natural landscapes that calm the mind and inspire the soul.
+            </p>
+        </div>
+
+        <div class="feature-box">
+            <h3>Deep Peace</h3>
+            <p>
+                Experience true tranquility through nature-focused mindfulness environments.
+            </p>
+        </div>
+
+        <div class="feature-box">
+            <h3>Friendly Community</h3>
+            <p>
+                Connect with people who share appreciation for harmony, nature, and inspiration.
+            </p>
+        </div>
+
+        <div class="feature-box">
+            <h3>Endless Inspiration</h3>
+            <p>
+                Let natural beauty spark creativity, purpose, and emotional clarity.
+            </p>
+        </div>
+
     </div>
+</section>
+       </div>
+      
+      </div>
+     <footer>
+        <div class="content">
+            <div class="footer-links">
+                <div class="link-group">
+                    <div class="footer-title">Quick Links</div>
+                    <nav>
+                        <a href="#">Home</a>
+                        <a href="#">Services</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Contact</a>
+                    </nav>
+                </div>
+
+                <div class="link-group">
+                    <div class="footer-title">OPINION</div>
+                    <nav>
+                    <input type="text" placeholder="text">
+                        <a href="#">General Dentistry</a>
+                        <a href="#">Orthodontics</a>
+                        <a href="#">Cosmetic Dentistry</a>
+                        <a href="#">Pediatric Dentistry</a>
+                    </nav>
+                </div>
+
+                <div class="link-group">
+                    <div class="footer-title">Login</div>
+                    <nav>
+                        <a href="#">Sign up</a>
+                        <a href="#">Log in</a>
+                        <a href="#">Reset Password</a>
+                    </nav>
+                </div>
+            <div class="footer-bottom">
+                &copy; 2025 Nature:Lives Inside!
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
