adding the footer~

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>toy building</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     Toy block games are timeless, imaginative play experiences that encourage creativity, problem-solving, and hands-on learning for children of all ages. With colorful shapes, varying sizes, and endless building possibilities, toy blocks invite kids to experiment freely, whether they’re stacking simple towers, constructing elaborate cities, or designing unique structures inspired by their own ideas. As children explore how different pieces fit together, they naturally develop fine motor skills, hand-eye coordination, and spatial awareness. The game also nurtures cognitive growth by challenging young builders to think critically—balancing blocks, predicting outcomes, and revising their designs when something topples. Beyond solo play, toy block games foster cooperation and communication when shared with friends or family, as children negotiate roles, plan together, and celebrate their collective creations. Their open-ended nature ensures that no two play sessions feel the same, making toy blocks a versatile and enduring tool for both fun and learning.
   </p>
   <main>
-    <section class="">
+    <section class="about">
       <form>
         <button type="button"> Tricks</button>
       </form>
