changing the name of logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="hero">
     <div class="live">
       <div class="alife">
-        <h2 class="logo"> Bridge </h2>
+        <h2 class="logo"> BeaView </h2>
       </div>
       <div class="menu">
         <header>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="content">
-      <h1> Bridge in the world with<br> <span>the most Beatiful</span><br>Views</h1><br>
+      <h1> Nature in the world with<br> <span>the most Beatiful</span><br>Views</h1><br>
       <p class="par">1 Several years ago Leo Sandy entered into dialogue with fellow veterans to explore the <br> <br>
         nature of peace and, based on their own experiences of war, to provide a satisfactory account that could serve
         <br> <br> as a guide for all peacemakers who seek a world without war. This paper draws, in part, on that
