removing <div > another waste of time

--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
   <footer>
     <div class="content">
       <div class="footer-content">
-            <div class="data">
+
         <form >
         <input type="text" placeholder="Opinion:Questions">
         <button class="foot-btn">submit</button>
         </form>
-    </div>
-
 
         <div class="link-group">
           <div class="footer-title">Quick Links</div>
@@ -125,7 +123,7 @@
         </nav>
       </div>
       <div class="footer-bottom">
-        &copy; 2025 Nature:Lives Inside!
+        &copy; 2025 Nature:Lives Inside the Enviroment!
       </div>
     </div>
   </footer>
