background color for the page called about us

--- a/about.html
+++ b/about.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <style> {
+    backgrounnd-image:url("./imageweb/hdb30wtkjbn08xlf-2380240323.jpg");
+
+    } </style>
   <h1>
     Peace: Nature
   </h1>
